[package]
name = "quick-table-client"
version = "0.1.1"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
reqwest = { version = "0.11", features = ["json"] }
async-trait = "0.1.80"
thiserror = "1.0"